Upgrade python packages and Claude models

--- a/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
+++ b/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
@@ -134,11 +134,11 @@
     "                                  #llm_model=\"bedrock/anthropic.claude-3-7-sonnet-20250219-v1:0\",\n",
     "                                  #llm_model=\"anthropic.claude-3-5-sonnet-20240620-v1:0\",\n",
     "                                  #llm_model=\"groq/deepseek-r1-distill-llama-70b\",\n",
-    "                                  #llm_model=\"gemini/gemini-2.0-flash\",\n",
-    "                                  #llm_model=\"gemini/gemini-2.5-flash-preview-05-20\",\n",
-    "                                  #llm_model=\"gemini/gemini-2.5-flash-preview-tts\",\n",
+    "                                  #llm_model=\"gemini/gemini-3-pro-preview\",\n",
+    "                                  llm_model=\"gemini/gemini-2.5-flash\",\n",
+    "                                  #llm_model=\"gemini/gemini-2.5-pro\",\n",
     "                                  #llm_model=\"azure_ai/deepseek-v3\",\n",
-    "                                  llm_model=\"gpt-4.5-preview\",\n",
+    "                                  #llm_model=\"gpt-4.5-preview\",\n",
     "                                  #llm_model=\"gpt-4o-2024-08-06\",\n",
     "                                  #llm_model=\"claude-3-5-sonnet\",\n",
     "                                  #llm_model=\"mistral/mistral-large-latest\",\n",
@@ -377,7 +377,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.9"
   }
  },
  "nbformat": 4,
