--- a/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
+++ b/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
@@ -103,9 +103,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'gpt-4o-mini'"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "await ad.llm.get_llm_model(analytiq_client, prompt_revid)"
    ]
@@ -126,7 +137,89 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-24 14:20:55,422 - analytiq_data.llm.llm - INFO - Running new LLM analysis for doc_id/prompt_revid 687c5bd2eecf1be4639ea6d0/688ae98796b08198647ef46d\n",
+      "2025-12-24 14:20:55,423 - analytiq_data.llm.llm - INFO - 687c5bd2eecf1be4639ea6d0/688ae98796b08198647ef46d: LLM model: openrouter/openai/gpt-5.2-chat, provider: openrouter, api_key: sk-or-v1-e3b6190********\n",
+      "2025-12-24 14:20:55,429 - analytiq_data.llm.llm - INFO - 687c5bd2eecf1be4639ea6d0/688ae98796b08198647ef46d: Attaching OCR and PDF to prompt using base64 for openrouter\n",
+      "2025-12-24 14:20:55,429 - analytiq_data.llm.llm - INFO - 687c5bd2eecf1be4639ea6d0/688ae98796b08198647ef46d: No response format found for prompt\n",
+      "\u001b[92m14:20:55 - LiteLLM:INFO\u001b[0m: utils.py:3476 - \n",
+      "LiteLLM completion() model= openai/gpt-5.2-chat; provider = openrouter\n",
+      "2025-12-24 14:20:55,431 - LiteLLM - INFO - \n",
+      "LiteLLM completion() model= openai/gpt-5.2-chat; provider = openrouter\n",
+      "2025-12-24 14:21:08,150 - analytiq_data.payments.spu - INFO - Recording 1 spu usage for org_id: 684d12aafb34e85859f12712, provider: openrouter, model: openrouter/openai/gpt-5.2-chat\n",
+      "2025-12-24 14:21:08,158 - analytiq_data.llm.llm - INFO - Saving LLM result: {'prompt_revid': '688ae98796b08198647ef46d', 'prompt_id': '67fb329275436ea808f0c0b5', 'prompt_version': 7, 'document_id': '687c5bd2eecf1be4639ea6d0', 'llm_result': {'document_type': 'Homeowner Application', 'form_name': 'ACORD 80 Homeowner Application', 'agency_name': 'PROVTRUST INSURANCE GROUP LLC', 'agency_address': '941 Park Ave, Cranston, RI 02910', 'agency_phone': '', 'agency_fax': '', 'agency_customer_id': '', 'applicant_name': 'Susan A Boucher for life', 'applicant_mailing_address': '51 Isabella Ave, Providence, RI 02908', 'applicant_home_phone': '', 'applicant_business_phone': '', 'co_applicant_name': 'Ashley M Gilbert', 'co_applicant_occupation': '', 'policy_number': '', 'effective_date': '', 'expiration_date': '', 'property_address': '', 'year_built': '1950', 'number_of_families': '1', 'number_of_apartments': '1', 'square_footage': '904', 'purchase_date': '1996', 'structure_type': 'Dwelling', 'usage_type': 'Primary', 'construction_type': 'Masonry', 'siding_type': 'Vinyl', 'roof_material': 'asp', 'roof_condition': 'good', 'heating_type': 'Central', 'plumbing_system': '', 'wiring_type': '', 'coverage_form': 'HO3', 'dwelling_coverage': '347270', 'other_structures_coverage': '40000', 'personal_property_coverage': '40000', 'loss_of_use_coverage': '', 'personal_liability_coverage': '100000', 'medical_payments_coverage': '2500', 'deductible_all_peril': '2500', 'deductible_wind_hail': '1%', 'replacement_cost_dwelling': 'Yes', 'replacement_cost_contents': '', 'premium_total': '', 'deposit': '', 'balance': '', 'prior_carrier': '', 'prior_policy_number': '', 'prior_expiration_date': '', 'loss_history': '', 'additional_interest': '', 'mortgagee_name_address': '', 'remarks': '', 'applicant_signature': '', 'producer_signature': '', 'national_producer_number': '', 'form_date': '2005/08'}, 'updated_llm_result': {'document_type': 'Homeowner Application', 'form_name': 'ACORD 80 Homeowner Application', 'agency_name': 'PROVTRUST INSURANCE GROUP LLC', 'agency_address': '941 Park Ave, Cranston, RI 02910', 'agency_phone': '', 'agency_fax': '', 'agency_customer_id': '', 'applicant_name': 'Susan A Boucher for life', 'applicant_mailing_address': '51 Isabella Ave, Providence, RI 02908', 'applicant_home_phone': '', 'applicant_business_phone': '', 'co_applicant_name': 'Ashley M Gilbert', 'co_applicant_occupation': '', 'policy_number': '', 'effective_date': '', 'expiration_date': '', 'property_address': '', 'year_built': '1950', 'number_of_families': '1', 'number_of_apartments': '1', 'square_footage': '904', 'purchase_date': '1996', 'structure_type': 'Dwelling', 'usage_type': 'Primary', 'construction_type': 'Masonry', 'siding_type': 'Vinyl', 'roof_material': 'asp', 'roof_condition': 'good', 'heating_type': 'Central', 'plumbing_system': '', 'wiring_type': '', 'coverage_form': 'HO3', 'dwelling_coverage': '347270', 'other_structures_coverage': '40000', 'personal_property_coverage': '40000', 'loss_of_use_coverage': '', 'personal_liability_coverage': '100000', 'medical_payments_coverage': '2500', 'deductible_all_peril': '2500', 'deductible_wind_hail': '1%', 'replacement_cost_dwelling': 'Yes', 'replacement_cost_contents': '', 'premium_total': '', 'deposit': '', 'balance': '', 'prior_carrier': '', 'prior_policy_number': '', 'prior_expiration_date': '', 'loss_history': '', 'additional_interest': '', 'mortgagee_name_address': '', 'remarks': '', 'applicant_signature': '', 'producer_signature': '', 'national_producer_number': '', 'form_date': '2005/08'}, 'is_edited': False, 'is_verified': False, 'created_at': datetime.datetime(2025, 12, 24, 19, 21, 8, 157921, tzinfo=datetime.timezone.utc), 'updated_at': datetime.datetime(2025, 12, 24, 19, 21, 8, 157921, tzinfo=datetime.timezone.utc)}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'document_type': 'Homeowner Application',\n",
+       " 'form_name': 'ACORD 80 Homeowner Application',\n",
+       " 'agency_name': 'PROVTRUST INSURANCE GROUP LLC',\n",
+       " 'agency_address': '941 Park Ave, Cranston, RI 02910',\n",
+       " 'agency_phone': '',\n",
+       " 'agency_fax': '',\n",
+       " 'agency_customer_id': '',\n",
+       " 'applicant_name': 'Susan A Boucher for life',\n",
+       " 'applicant_mailing_address': '51 Isabella Ave, Providence, RI 02908',\n",
+       " 'applicant_home_phone': '',\n",
+       " 'applicant_business_phone': '',\n",
+       " 'co_applicant_name': 'Ashley M Gilbert',\n",
+       " 'co_applicant_occupation': '',\n",
+       " 'policy_number': '',\n",
+       " 'effective_date': '',\n",
+       " 'expiration_date': '',\n",
+       " 'property_address': '',\n",
+       " 'year_built': '1950',\n",
+       " 'number_of_families': '1',\n",
+       " 'number_of_apartments': '1',\n",
+       " 'square_footage': '904',\n",
+       " 'purchase_date': '1996',\n",
+       " 'structure_type': 'Dwelling',\n",
+       " 'usage_type': 'Primary',\n",
+       " 'construction_type': 'Masonry',\n",
+       " 'siding_type': 'Vinyl',\n",
+       " 'roof_material': 'asp',\n",
+       " 'roof_condition': 'good',\n",
+       " 'heating_type': 'Central',\n",
+       " 'plumbing_system': '',\n",
+       " 'wiring_type': '',\n",
+       " 'coverage_form': 'HO3',\n",
+       " 'dwelling_coverage': '347270',\n",
+       " 'other_structures_coverage': '40000',\n",
+       " 'personal_property_coverage': '40000',\n",
+       " 'loss_of_use_coverage': '',\n",
+       " 'personal_liability_coverage': '100000',\n",
+       " 'medical_payments_coverage': '2500',\n",
+       " 'deductible_all_peril': '2500',\n",
+       " 'deductible_wind_hail': '1%',\n",
+       " 'replacement_cost_dwelling': 'Yes',\n",
+       " 'replacement_cost_contents': '',\n",
+       " 'premium_total': '',\n",
+       " 'deposit': '',\n",
+       " 'balance': '',\n",
+       " 'prior_carrier': '',\n",
+       " 'prior_policy_number': '',\n",
+       " 'prior_expiration_date': '',\n",
+       " 'loss_history': '',\n",
+       " 'additional_interest': '',\n",
+       " 'mortgagee_name_address': '',\n",
+       " 'remarks': '',\n",
+       " 'applicant_signature': '',\n",
+       " 'producer_signature': '',\n",
+       " 'national_producer_number': '',\n",
+       " 'form_date': '2005/08'}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "llm_result = await ad.llm.run_llm(analytiq_client,\n",
     "                                  document_id=document_id,\n",
@@ -135,10 +228,10 @@
     "                                  #llm_model=\"anthropic.claude-3-5-sonnet-20240620-v1:0\",\n",
     "                                  #llm_model=\"groq/deepseek-r1-distill-llama-70b\",\n",
     "                                  #llm_model=\"gemini/gemini-3-pro-preview\",\n",
-    "                                  llm_model=\"gemini/gemini-2.5-flash\",\n",
+    "                                  #llm_model=\"openrouter/openai/gpt-5.2-chat\",\n",
     "                                  #llm_model=\"gemini/gemini-2.5-pro\",\n",
     "                                  #llm_model=\"azure_ai/deepseek-v3\",\n",
-    "                                  #llm_model=\"gpt-4.5-preview\",\n",
+    "                                  llm_model=\"gpt-5.2\",\n",
     "                                  #llm_model=\"gpt-4o-2024-08-06\",\n",
     "                                  #llm_model=\"claude-3-5-sonnet\",\n",
     "                                  #llm_model=\"mistral/mistral-large-latest\",\n",
