--- a/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
+++ b/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
@@ -193,7 +193,7 @@
     "await ad.llm.run_llm_for_prompt_revids(analytiq_client,\n",
     "                                        document_id=document_id,\n",
     "                                        prompt_revids=[prompt_revid],\n",
-    "                                        model=\"groq/deepseek-r1-distill-llama-70b\")\n"
+    "                                        llm_model=\"groq/deepseek-r1-distill-llama-70b\")\n"
    ]
   },
   {
