--- a/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
+++ b/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "org_id = \"6795345439604beca2b2808d\"\n",
-    "prompt_id, version = await ad.common.get_prompt_id(analytiq_client, \"cv\", org_id)\n",
+    "prompt_id, version = await ad.common.get_prompt_id(analytiq_client, \"Resume Data Extraction\", org_id)\n",
     "prompt_id, version"
    ]
   },
@@ -89,7 +89,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "prompt_revid = \"68926f54b175d0e0ff51b11c\""
+    "#prompt_revid = \"68926f54b175d0e0ff51b11c\""
    ]
   },
   {
