--- a/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
+++ b/packages/python/analytiq_data/notebooks/tests/test_llm.ipynb
@@ -139,9 +139,10 @@
     "                                  #llm_model=\"gemini/gemini-2.5-pro\",\n",
     "                                  #llm_model=\"azure_ai/deepseek-v3\",\n",
     "                                  #llm_model=\"gpt-5.2\",\n",
-    "                                  llm_model=\"xai/grok-4-1-fast-reasoning\",\n",
+    "                                  #llm_model=\"xai/grok-4-1-fast-reasoning\",\n",
     "                                  #llm_model=\"gpt-4o-2024-08-06\",\n",
-    "                                  #llm_model=\"claude-3-5-sonnet\",\n",
+    "                                  #llm_model=\"claude-sonnet-4-5-20250929\",\n",
+    "                                  llm_model=\"claude-opus-4-6\",\n",
     "                                  #llm_model=\"mistral/mistral-large-latest\",\n",
     "                                  #llm_model=\"mistral/open-mixtral-8x22b\",\n",
     "                                  force=True)\n",
